# ComfyUI_QwenVL_PromptCaption

./: README.md  __init__.py  caption_widget.js  example_prompts.txt  ovis_25.py  prompts.txt  pyproject.toml  qwen_25.py  qwen_3.py  requirements.txt  string_to_bbox.py
.qoder/skills/comfyui-node-param/: SKILL.md
example_workflows/: Qwen_VL.json
js/: caption_widget.js
